chore(admin): 收敛模块文档与构建配置